# ISARIC2OMOP

./: .env.example  README.md  docker-compose.yml  pyproject.toml
core/: db_connector.py
database/: Dockerfile  OMOPCDM_postgresql_5.4_constraints.sql  OMOPCDM_postgresql_5.4_ddl.sql  OMOPCDM_postgresql_5.4_indices.sql  OMOPCDM_postgresql_5.4_primary_keys.sql  docker-compose.yml  init_db.sh
isaric_to_omop/: concept.py  condition.py  drug_exposure.py  location.py  main.py  measurement.py  observation.py  person.py  procedure.py  utils.py  visit.py
tests/: test_utils.py
